k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport-service
spec:
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: NodePort
