k8s/simple-app-service.yaml
# api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: LoadBalancer
