k8s/simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: simple-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-nodeport-service
                port:
                  number: 8089
